--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,1 +1,24 @@
-<p>usuarios works!</p>
+<div class="container">
+
+  <table class="table table-striped">
+    <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Correo</th>
+      <th scope="col">Rol</th>
+      <th scope="col">Acción</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let usuario of usuarios;  index as ind">
+      <th scope="row">{{ind+1}}</th>
+      <td>{{usuario.nombreUsuario}}</td>
+      <td>{{usuario.correo}}</td>
+      <td>{{usuario.rol}}</td>
+      <td></td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
